test(dev6): support Android unit-test Java API